--- a/BackgroundTrad.tex
+++ b/BackgroundTrad.tex
@@ -513,6 +513,7 @@ James in his thesis went on to work on domain specific languages for railway ver
 
 The Safecap project was a joint collaboration between researchers at Swansea and Newcastle University to look into modelling capacity and its relationship with safety on the railway \cite{YI12}. It resulted in a new specification formalism CSP$\parallel$B being used to model a double junction \cite{FM12}. This is complicated from a verification point of view as there are many different possibilities for train movements but it was never the less verified using the ProB tool. This project also resulted in an approach to verify segments of railways in a modular fashion i.e. the verification of a segment of track is implied by verification of its constituent components \cite{FM12b}.
 
+Outside of Swansea, A number of other approaches have been developed to verify train control systems. The SPIN model checker has been successfully applied to verify railway interlockings \cite{AC98}.
 
 
 \begin{comment}
