--- a/lit.bib
+++ b/lit.bib
@@ -422,7 +422,7 @@
   booktitle = {Computer Safety, Reliability and Security},
   year = {1998},
   volume = {1516},
-  series = {Lecture Notes in Computer Science},
+  series = {Lecture {N}otes in {C}omputer {S}cience},
   pages = {284--293},
   publisher = {Springer Berlin / Heidelberg}
 }
@@ -766,6 +766,15 @@
   series = {LICS '96},
   pages = {278--292},
   publisher = {IEEE Computer Society}
+}
+
+@BOOK{GH04,
+  title = {The SPIN Model Checker},
+  publisher = {Addison Wesley},
+  year = {2004},
+  author = {Holzmann, G.},
+  owner = {andylawrence},
+  timestamp = {2014.04.29}
 }
 
 @ARTICLE{WH80,
@@ -1210,6 +1219,18 @@
   publisher = {Springer-Verlag}
 }
 
+@INPROCEEDINGS{DP94,
+  author = {Peled, D.},
+  title = {Combining partial order reductions with on-the-fly model-checking},
+  booktitle = {In Proceedings of the 6th International Conference on  Computer Aided
+	Verification (CAV'94)},
+  year = {1994},
+  pages = {377--390},
+  publisher = {Springer-Verlag},
+  owner = {andylawrence},
+  timestamp = {2014.04.29}
+}
+
 @ARTICLE{AP08,
   author = {Platzer, A.},
   title = {Differential dynamic logic for hybrid systems},
@@ -1276,13 +1297,13 @@
 
 @MISC{ETCSHB,
   author = {International Union of Railways},
-  title = {ETCS Implementation Handbook},
+  title = {{ETCS} Implementation Handbook},
   year = {2008}
 }
 
 @MISC{ETCSSRS,
   author = {International Union of Railways},
-  title = {ETCS System Requirements Specification (SRS)},
+  title = {{ETCS} System Requirements Specification (SRS)},
   year = {2006},
   version = { 2.3.0}
 }
@@ -1415,6 +1436,19 @@
   publisher = {ACM}
 }
 
+@INPROCEEDINGS{GT83,
+  author = {Tseitin, G.},
+  title = {On the complexity of derivation in propositional calculus},
+  booktitle = {Automation of Reasoning: Classical Papers in Computational Logic},
+  year = {1983},
+  volume = {2},
+  pages = {466--483},
+  publisher = {Springer-Verlag},
+  journal = {Automation of Reasoning: Classical Papers in Computational Logic},
+  owner = {andylawrence},
+  timestamp = {2014.04.29}
+}
+
 @INPROCEEDINGS{KV00,
   author = {Verma, K. N. and Goubault-Larrecq, J. and Parsad, S. and Arun-Kumar,
 	S.},
@@ -1512,5 +1546,10 @@
 
 @MISC{Scade,
   note = {Scade, http://www.esterel-technologies.com}
+}
+
+@BOOK{,
+  owner = {andylawrence},
+  timestamp = {2014.04.29}
 }
 
