--- a/lit.bib
+++ b/lit.bib
@@ -896,6 +896,20 @@
   publisher = {University of Wales Swansea}
 }
 
+@INPROCEEDINGS{MK11,
+  author = {Kwiatkowska, M. and Norman G. and Parker, D.},
+  title = {{PRISM} 4.0: Verification of Probablistic Real-Time Systems},
+  booktitle = {Computer Aided Verification},
+  year = {2011},
+  editor = {Gopalakrishnan, G. and Qadeer, S.},
+  volume = {6806},
+  series = {Lecture {N}otes in {C}omputer {S}cience},
+  pages = {585--591},
+  publisher = {Springer Berlin / Heidelberg},
+  owner = {andylawrence},
+  timestamp = {2014.04.30}
+}
+
 @BOOK{KL96,
   title = {The {B} language and method: A guide to practical formal development},
   publisher = {Springer},
@@ -1222,7 +1236,7 @@
 @INPROCEEDINGS{DP94,
   author = {Peled, D.},
   title = {Combining partial order reductions with on-the-fly model-checking},
-  booktitle = {In Proceedings of the 6th International Conference on  Computer Aided
+  booktitle = {In Proceedings of the 6th International Conference on Computer Aided
 	Verification (CAV'94)},
   year = {1994},
   pages = {377--390},
