--- a/lit.bib
+++ b/lit.bib
@@ -144,6 +144,18 @@
   publisher = {Springer Berlin, Heidelberg}
 }
 
+@INPROCEEDINGS{JB62,
+  author = {B{\"u}chi, J. R.},
+  title = {On a decision method in restricted second order arithmetic},
+  booktitle = {Proceedings of the International Congress on Logic, Method, and Philosophy
+	of Science. (1960)},
+  year = {1962},
+  pages = {1--12},
+  publisher = {Stanford University Press},
+  owner = {andylawrence},
+  timestamp = {2014.04.30}
+}
+
 @INCOLLECTION{LB93,
   author = {Bachmair, L. and Ganzinger, H. and Waldmann, U.},
   title = {Superposition with simplification as a decision procedure for the
@@ -460,7 +472,7 @@
 }
 
 @INPROCEEDINGS{MC03,
-  author = {Clavel, M. and Durán, F. and Eker, S. and Lincoln, P. and Martí-Oliet,
+  author = {Clavel, M. and Dur{\'a}n, F. and Eker, S. and Lincoln, P. and Mart{\'i}-Oliet,
 	N. and Meseguer, J. and Talcott, C.},
   title = {The {M}aude 2.0 System},
   booktitle = {International Conference on Rewriting Techniques and Applications
