--- a/verifyertms.tex
+++ b/verifyertms.tex
@@ -88,7 +88,7 @@ Result ClockedSystem :
 In fig \ref{t1t2} we see that train2 never enters the same track segment as train1.
 
 \section{The Maude Linear Temporal Logic Model Checker}
-The Real Time Maude system includes an on-the-fly model checker for linear temporal logic \cite{ES00}.  This is a useful automatic tool which allows for the verification and analysis of real time systems. In addition to the positive verification results in which a safety property holds,  the system produces, in the case of a negative verification result, a counter example trace which describes how the error occured from the initial state of the system.
+The Real Time Maude system employs the Maude LTL Model Checker on-the-fly LTL model checker for \cite{ES00} verification purposes.  This is a useful automatic tool which allows for the verification and analysis of real time systems. In addition to the positive verification results in which a safety property holds,  the system produces, in the case of a negative verification result, a counter example trace which describes how the error occured from the initial state of the system.
 
  
 
