--- a/Main.tex
+++ b/Main.tex
@@ -12,7 +12,7 @@
 \usepackage{multirow}
 \usepackage{url}
 \usepackage{rotating}
-
+\usepackage{placeins}
  \usepackage{todonotes}
 \usepackage{listings}
 \usepackage{minitoc}
